--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,10 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "docxtemplater": "^3.61.1",
+    "docxtemplater-image-module-free": "^1.1.1",
     "envalid": "^8.0.0",
+    "pizzip": "^3.1.8",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite": "^5.1.1",
