--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@nabla/vite-plugin-eslint": "^2.0.5",
+    "@reduxjs/toolkit": "^2.7.0",
+    "axios": "^1.9.0",
+    "polished": "^4.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.2",
+    "styled-components": "^6.1.17",
+    "vite-plugin-checker": "^0.9.1",
+    "vite-tsconfig-paths": "^5.1.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
