--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-data-grid": "^8.0.0-beta.3",
     "@nabla/vite-plugin-eslint": "^2.0.5",
     "@reduxjs/toolkit": "^2.7.0",
+    "@tanstack/react-query": "^5.74.7",
     "axios": "^1.9.0",
     "polished": "^4.3.1",
     "react": "^19.0.0",
