add customer and equipment creation

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -32,6 +32,7 @@
       "@reducers": ["./src/store/reducers"],
       "@constants": ["./src/constants"],
       "@components/*": ["./src/components/*"],
+      "@hooks": ["./src/hooks"],
       "@assets/*": ["./src/assets/*"]
     }
   },
