--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
     "styled-components": "^6.1.17",
