add passport doc

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -33,6 +33,7 @@
       "@constants": ["./src/constants"],
       "@components": ["./src/components"],
       "@hooks": ["./src/hooks"],
+      "@utils": ["./src/utils"],
       "@assets/*": ["./src/assets/*"]
     }
   },
