--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.17",
     "vite-plugin-checker": "^0.9.1",
     "vite-tsconfig-paths": "^5.1.4",
