--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,9 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "docx-templates": "^4.14.1",
     "docxtemplater": "^3.61.1",
+    "docxtemplater-html": "^1.0.0",
     "docxtemplater-image-module-free": "^1.1.1",
     "envalid": "^8.0.0",
     "pizzip": "^3.1.8",
